# triangalizer

./: CMakeLists.txt  PointLine.cpp  PointLine.h  SlopeLine.cpp  SlopeLine.h  Triangle.cpp  Triangle.h  Vertex.cpp  Vertex.h  addons.cpp  addons.h  main.cpp
